# tp3-cicd-docker

./: .coverage  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  deploy-green.sh  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
nginx/: blue-green.conf  default.conf
src/: cache.py  db.py  main.py
src/routes/: tasks.py
src/schemas/: task.py
tests/integration/: conftest.py  test_health.py  test_tasks_api.py
tests/unit/: test_cache.py  test_db.py  test_schemas.py
